--- a/package.json
+++ b/package.json
@@ -11,10 +11,27 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "ejs": "^3.1.10",
+    "@mapbox/mapbox-sdk": "^0.15.3",
+    "cloudinary": "^1.41.0",
+    "compression": "^1.8.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.16.5"
+    "mongoose": "^8.0.2",
+    "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
